<resources>
    <string name="app_name">Now Playing</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="now_playing">Now Playing</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="more">More</string>
    <string name="watchlist">Watchlist</string>
    <string name="settings">settings</string>
    <string name="favorites">Favorites</string>
    <string name="seen">Seen</string>
    <string name="all_genres">All genres</string>
    <string name="release_date">release date</string>
    <string name="episodes_details">Episode\'s Details</string>
    <string name="image">image</string>
    <string name="episode">Episode</string>
    <string name="rate">Rate</string>
    <string name="tv_show_rate">Tv show rate</string>
    <string name="tv_show_votes">Tv show votes</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="original_title">Original title</string>
    <string name="tv_show_details">Tv Show Details</string>
    <string name="episodes_overview">Episode\'s overview</string>
    <string name="episode_s_title">Episode\'s Title</string>
    <string name="votes">Votes</string>
    <string name="homepage">Homepage</string>
    <string name="show_seasons">Show Seasons</string>
    <string name="hide_seasons">Hide Seasons</string>
    <string name="season_overview">Season Overview</string>
    <string name="okay">Close</string>
    <string name="created_by">Created by</string>
    <string name="season">Season %1$s</string>
    <string name="episodes">%1$s episodes</string>
    <string name="add_to_seen">Add to seen</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="connectivity_problems_ntap_to_get_the_updated_data">Connectivity problems</string>
    <string name="more_info">More info</string>
    <string name="move_to_favorites">Move to favorites</string>
    <string name="move_to_seen">Move to seen</string>
    <string name="move_to_watchlist">Move to watchlist</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="rate_tv_show">Rate Tv show</string>
    <string name="search_tv_show">Search tv show</string>
</resources>
