<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing" />

    <com.google.android.material.button.MaterialButton

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/most_popular" />

    <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top_rated" />

    <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watchlist" />

    <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites" />

    <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites" />

    <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites" />

</merge>