<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/now_playing">

    <fragment
        android:id="@+id/now_playing"
        android:name="com.example.tvshows.ui.nowplaying.NowPlayingFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/now_playing_fragment" >
        <action
            android:id="@+id/action_now_playing_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/from_up"
            app:exitAnim="@anim/to_bottom"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_now_playing_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/favorites"
        android:name="com.example.tvshows.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/favorites_fragment" >
        <action
            android:id="@+id/action_favorites_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_favorites_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/Popular"
        android:name="com.example.tvshows.ui.mostpopular.MostPopularFragment"
        android:label="@string/most_popular"
        tools:layout="@layout/most_popular_fragment" >
        <action
            android:id="@+id/action_Popular_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_Popular_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/seen"
        android:name="com.example.tvshows.ui.seen.SeenFragment"
        android:label="@string/seen"
        tools:layout="@layout/seen_fragment" >
        <action
            android:id="@+id/action_seen_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_seen_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settings"
        android:name="com.example.tvshows.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" >
        <action
            android:id="@+id/action_settings_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/Top_Rated"
        android:name="com.example.tvshows.ui.toprated.TopRatedFragment"
        android:label="@string/top_rated"
        tools:layout="@layout/top_rated_fragment" >
        <action
            android:id="@+id/action_Top_Rated_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_Top_Rated_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/watchlist"
        android:name="com.example.tvshows.ui.watchlist.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/watchlist_fragment" >
        <action
            android:id="@+id/action_watchlist_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_watchlist_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.tvshows.ui.search.SearchFragment"
        android:label="Search tv show"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_searchFragment_to_now_playing"
            app:destination="@id/now_playing"
            app:exitAnim="@anim/from_left" />
        <action
            android:id="@+id/action_searchFragment_to_Popular"
            app:destination="@id/Popular" />
        <action
            android:id="@+id/action_searchFragment_to_favorites"
            app:destination="@id/favorites" />
        <action
            android:id="@+id/action_searchFragment_to_Top_Rated"
            app:destination="@id/Top_Rated" />
        <action
            android:id="@+id/action_searchFragment_to_settings"
            app:destination="@id/settings" />
        <action
            android:id="@+id/action_searchFragment_to_watchlist"
            app:destination="@id/watchlist" />
        <action
            android:id="@+id/action_searchFragment_to_seen"
            app:destination="@id/seen" />
        <action
            android:id="@+id/action_searchFragment_to_showDetailsFragment"
            app:destination="@id/showDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/showDetailsFragment"
        android:name="com.example.tvshows.ui.show_details.ShowDetailsFragment"
        android:label="Tv Show Details"
        tools:layout="@layout/show_details_fragment" >
        <action
            android:id="@+id/action_showDetailsFragment_to_now_playing"
            app:destination="@id/now_playing"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="deriveFrom"
            app:argType="string" />
        <action
            android:id="@+id/action_showDetailsFragment_to_searchFragment"
            app:destination="@id/searchFragment" />

    </fragment>
</navigation>