<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/add_to_watchlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:drawableTint="@color/white"
        android:drawablePadding="17dp"

        android:text="@string/add_to_watchlist"
        android:textSize="17sp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="17dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableLeftCompat="@drawable/watchlist" />
    <View
        android:layout_width="match_parent"
        android:id="@+id/firstview"
        android:layout_height="0.1dip"
        android:background="@color/windowBackGround"
        app:layout_constraintTop_toBottomOf="@+id/add_to_watchlist"
        />

    <TextView
        android:id="@+id/add_to_favorites"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:drawableTint="@color/white"
        android:drawablePadding="17dp"
        android:text="@string/add_to_favorites"
        android:textSize="17sp"
        android:padding="17dp"

        app:layout_constraintTop_toBottomOf="@+id/firstview"
        app:drawableStartCompat="@drawable/favorite" />
    <View
        android:layout_width="match_parent"
        android:id="@+id/secview"
        android:background="@color/windowBackGround"
        android:layout_height="0.1dip"
        app:layout_constraintTop_toBottomOf="@+id/add_to_favorites"
        />
    <TextView
        android:id="@+id/add_to_seen"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/add_to_seen"
        android:textSize="17sp"

        app:drawableTint="@color/white"
        android:drawablePadding="17dp"
        android:padding="17dp"

        app:layout_constraintTop_toBottomOf="@+id/secview"
        app:drawableStartCompat="@drawable/seen" />
</androidx.constraintlayout.widget.ConstraintLayout>